--- a/app/src/main/res/layout/activity_front.xml
+++ b/app/src/main/res/layout/activity_front.xml
@@ -5,7 +5,51 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/submitButton"
+        android:layout_below="@+id/isTiredBox"
+        android:layout_alignLeft="@+id/isTiredBox"
+        android:layout_alignStart="@+id/isTiredBox"
+        android:layout_marginTop="79dp" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New CheckBox"
+        android:id="@+id/isTiredBox"
+        android:hint="Are you tired?"
+        android:enabled="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/nameText"
+        android:layout_marginTop="77dp"
+        android:hint="Type in your name please"
+        android:enabled="true"
+        android:editable="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/ageText"
+        android:layout_alignStart="@+id/ageText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/ageText"
+        android:hint="Type in your age please"
+        android:layout_marginTop="36dp"
+        android:enabled="true"
+        android:editable="true"
+        android:layout_below="@+id/nameText"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
